--- a/css/style.css
+++ b/css/style.css
@@ -919,6 +919,11 @@ footer li {
   font-weight: 400;
   font-style: italic;
 }
+@media screen and (max-width: 450px) {
+  #testimonialsCarousel .testimonial {
+    padding: 0 5px;
+  }
+}
 #testimonialsCarousel .testimonial .title {
   text-transform: uppercase;
   font-style: normal;
@@ -929,24 +934,6 @@ footer li {
 #testimonialsCarousel .testimonial img {
   margin-top: 20px;
 }
-#testimonialsCarousel .bottom .social-media-icon-yt, #testimonialsCarousel .bottom .social-media-icon-ig, #testimonialsCarousel .bottom .social-media-icon-tw, #testimonialsCarousel .bottom .social-media-icon-fb {
-  display: flex;
-  position: absolute;
-  bottom: 12px;
-  right: 0;
-  justify-content: center;
-  align-items: center;
-  height: 30px;
-  width: 30px;
-  min-height: 30px;
-  min-width: 30px;
-  border: solid 3px black;
-  border-radius: 50%;
-  color: white;
-}
-#testimonialsCarousel .bottom .social-media-icon-yt:hover, #testimonialsCarousel .bottom .social-media-icon-ig:hover, #testimonialsCarousel .bottom .social-media-icon-tw:hover, #testimonialsCarousel .bottom .social-media-icon-fb:hover {
-  color: #F7F5E6;
-}
 #testimonialsCarousel .bottom {
   display: flex;
   position: relative;
@@ -954,59 +941,79 @@ footer li {
   align-items: center;
 }
 #testimonialsCarousel .bottom .profile-username {
-  padding: 0 1rem;
+  padding: 0 2.2rem 0 1rem;
   text-align: left;
   font-family: "Yellowtail", cursive;
   font-size: 1.2rem;
   font-weight: 500;
 }
-#testimonialsCarousel .bottom .social-media-icon-fb {
-  background-color: #3b5998;
-  font-size: 20px;
-  line-height: normal;
-  overflow: visible;
-}
-#testimonialsCarousel .bottom .social-media-icon-fb::after {
-  display: flex;
-  justify-content: center;
-  font-family: FontAwesome !important;
-  content: "";
-}
-#testimonialsCarousel .bottom .social-media-icon-tw {
-  background-color: #55acee;
-  font-size: 20px;
-  line-height: normal;
-  overflow: visible;
-}
-#testimonialsCarousel .bottom .social-media-icon-tw::after {
-  display: flex;
-  justify-content: center;
-  font-family: FontAwesome !important;
-  content: "";
-}
-#testimonialsCarousel .bottom .social-media-icon-ig {
-  background-color: #BC2A8D;
-  font-size: 20px;
-  line-height: normal;
-  overflow: visible;
-}
-#testimonialsCarousel .bottom .social-media-icon-ig::after {
-  display: flex;
-  justify-content: center;
-  font-family: FontAwesome !important;
-  content: "";
-}
-#testimonialsCarousel .bottom .social-media-icon-yt {
-  background-color: #FF3333;
-  font-size: 20px;
-  line-height: normal;
-  overflow: visible;
-}
-#testimonialsCarousel .bottom .social-media-icon-yt::after {
-  display: flex;
-  justify-content: center;
-  font-family: FontAwesome !important;
-  content: "";
+@media screen and (min-width: 350px) {
+  #testimonialsCarousel .bottom .social-media-icon-yt, #testimonialsCarousel .bottom .social-media-icon-ig, #testimonialsCarousel .bottom .social-media-icon-tw, #testimonialsCarousel .bottom .social-media-icon-fb {
+    display: flex;
+    position: absolute;
+    bottom: 12px;
+    right: 0;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    width: 30px;
+    min-height: 30px;
+    min-width: 30px;
+    border: solid 3px black;
+    border-radius: 50%;
+    color: white;
+  }
+  #testimonialsCarousel .bottom .social-media-icon-yt:hover, #testimonialsCarousel .bottom .social-media-icon-ig:hover, #testimonialsCarousel .bottom .social-media-icon-tw:hover, #testimonialsCarousel .bottom .social-media-icon-fb:hover {
+    color: #F7F5E6;
+  }
+  #testimonialsCarousel .bottom .social-media-icon-fb {
+    background-color: #3b5998;
+    font-size: 20px;
+    line-height: normal;
+    overflow: visible;
+  }
+  #testimonialsCarousel .bottom .social-media-icon-fb::after {
+    display: flex;
+    justify-content: center;
+    font-family: FontAwesome !important;
+    content: "";
+  }
+  #testimonialsCarousel .bottom .social-media-icon-tw {
+    background-color: #55acee;
+    font-size: 20px;
+    line-height: normal;
+    overflow: visible;
+  }
+  #testimonialsCarousel .bottom .social-media-icon-tw::after {
+    display: flex;
+    justify-content: center;
+    font-family: FontAwesome !important;
+    content: "";
+  }
+  #testimonialsCarousel .bottom .social-media-icon-ig {
+    background-color: #BC2A8D;
+    font-size: 20px;
+    line-height: normal;
+    overflow: visible;
+  }
+  #testimonialsCarousel .bottom .social-media-icon-ig::after {
+    display: flex;
+    justify-content: center;
+    font-family: FontAwesome !important;
+    content: "";
+  }
+  #testimonialsCarousel .bottom .social-media-icon-yt {
+    background-color: #FF3333;
+    font-size: 20px;
+    line-height: normal;
+    overflow: visible;
+  }
+  #testimonialsCarousel .bottom .social-media-icon-yt::after {
+    display: flex;
+    justify-content: center;
+    font-family: FontAwesome !important;
+    content: "";
+  }
 }
 #testimonialsCarousel .bottom .profile-picture img {
   width: 60px;
@@ -1019,13 +1026,19 @@ footer li {
   padding: 0 7%;
 }
 .achievement .title {
-  margin: 0 7%;
+  margin: 3rem 7%;
+}
+.achievement .logo {
+  display: flex;
+  justify-content: center;
 }
 .achievement .logo img {
-  float: left;
-  height: 60px;
-  width: auto;
-  margin: 0 2rem 0.5rem;
+  height: auto;
+  width: 100%;
+  max-width: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 10px;
 }
 
 * {
